--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Notes/03.simple-cnn/out_*
 Notes/02.arrays/Chapter4-master/
 Notes/02.arrays/Chapter4-master.zip
 Notes/03.simple-cnn/simple-cnn-2/out*
+O1*.txt
