Pool layer FIXED!

--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,16 @@ cifar
 nv_cifar
 nv_cnn
 nvc-compiler.md
-image.txt
 conv
 conv.c
 Notes/.~*
 *.o
-Notes/03.simple-cnn/*.o
-Notes/03.simple-cnn/cnn
-
-Notes/03.simple-cnn/out_*
 Notes/02.arrays/Chapter4-master/
 Notes/02.arrays/Chapter4-master.zip
+Notes/03.simple-cnn/*.o
+Notes/03.simple-cnn/cnn
+Notes/03.simple-cnn/out_*
 Notes/03.simple-cnn/simple-cnn-2/out*
-O1*.txt
-out
-In_50k.txt
-O2_1.txt
+out*
+*.txt
+outputs/
