create serial folder

--- a/serial_code/Makefile
+++ b/serial_code/Makefile
@@ -3,7 +3,7 @@
 CC = nvc
 CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native
 
-SRC = main.c layers.c malloc2D.c
+SRC = main_serial.c layers_serial.c malloc2D.c
 EXECUTABLE = cnn-cifar10
 
 all: $(EXECUTABLE)
