--- a/serial_code/Makefile
+++ b/serial_code/Makefile
@@ -1,7 +1,7 @@
 # Makefile for cnn-cifar10 project
 
 CC = nvc
-CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native -O0
+CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native
 
 SRC = main_serial.c layers_serial.c malloc2D.c
 EXECUTABLE = cnn-cifar10
