--- a/acc_code/Makefile
+++ b/acc_code/Makefile
@@ -1,16 +1,34 @@
-# Makefile for cnn-cifar10 project
-
 CC = nvc
-CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native -pg
+CFLAGS = -acc -Minfo=all -c11 -Wall -Wextra -march=native
+PROFILE_FLAGS = -pg
+DEBUG_FLAGS = -g
 
 SRC = main_acc.c layers_acc.c malloc2D.c
+OBJ = $(SRC:.c=.o)
 EXECUTABLE = cnn-cifar10-acc
+EXECUTABLE_PROFILE = cnn-cifar10-acc-profile
+EXECUTABLE_DEBUG = cnn-cifar10-acc-debug
 
 all: $(EXECUTABLE)
 
-$(EXECUTABLE): $(SRC)
+profile: CFLAGS += $(PROFILE_FLAGS)
+profile: $(EXECUTABLE_PROFILE)
+
+debug: CFLAGS += $(DEBUG_FLAGS)
+debug: $(EXECUTABLE_DEBUG)
+
+$(EXECUTABLE): $(OBJ)
 	$(CC) $(CFLAGS) -o $@ $^
+
+$(EXECUTABLE_PROFILE): $(OBJ)
+	$(CC) $(CFLAGS) -o $@ $^
+
+$(EXECUTABLE_DEBUG): $(OBJ)
+	$(CC) $(CFLAGS) -o $@ $^
+
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
 .PHONY: clean
 clean:
-	rm -f $(EXECUTABLE)
+	rm -f $(EXECUTABLE) $(EXECUTABLE_PROFILE) $(EXECUTABLE_DEBUG) $(OBJ)
