[serial_code]: Add padding function to conv_forward
 Added pad_input function to conv_forward to add padding on the input.
Not included to the conv_layer struct

--- a/serial_code/Makefile
+++ b/serial_code/Makefile
@@ -1,11 +1,11 @@
 CC = nvc
-CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native
+CFLAGS = -Minfo=all -c11 -Wall -Wextra -march=native 
 PROFILE_FLAGS = -pg
 DEBUG_FLAGS = -g
 
 SRC = main_serial.c layers_serial.c malloc2D.c
 OBJ = $(SRC:.c=.o)
-EXECUTABLE = cnn-cifar10-serial-2
+EXECUTABLE = cnn-cifar10-serial
 EXECUTABLE_PROFILE = cnn-cifar10-serial-profile
 EXECUTABLE_DEBUG = cnn-cifar10-serial-debug
 
