--- a/serial2parallel-1.2-data-on-device/Makefile
+++ b/serial2parallel-1.2-data-on-device/Makefile
@@ -1,5 +1,5 @@
 CC = nvc
-CFLAGS = -acc -Minfo=all -c11 -Wall -Wextra -march=native -gpu=managed
+CFLAGS = -acc -Minfo=all -c11 -Wall -Wextra -march=native 
 PROFILE_FLAGS = -pg
 DEBUG_FLAGS = -g
 
