added full network on GPU

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "string_view": "c",
         "ranges": "c",
         "iosfwd": "c",
-        "iterator": "c"
+        "iterator": "c",
+        "semaphore": "c",
+        "ratio": "c"
     }
 }
